Rename executable xss-sanitize-mackey
This will prevent confusion if other projects depend on
this library and independently build the executable

--- a/xss-sanitize.cabal
+++ b/xss-sanitize.cabal
@@ -36,7 +36,7 @@ library
     other-modules:   Text.HTML.SanitizeXSS.Css
     ghc-options:     -Wall
 
-executable xss-sanitize
+executable xss-sanitize-mackey
   main-is:             Main.hs
   hs-source-dirs:      src
   default-language: Haskell2010
